<resources>
    <string name="app_name">Khatabook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_expenses_fragment">Hello expenses fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_supplier">ADD SUPPLIER</string>
    <string name="you_will_give">You will give</string>
    <string name="who_are_they">Who are they?</string>
    <string name="supplier">Supplier</string>
    <string name="customer">Customer</string>
    <string name="add_customer">ADD CUSTOMER</string>
    <string name="entries">ENTRIES</string>
    <string name="you_gave">YOU GAVE</string>
    <string name="you_got">YOU GOT</string>
    <string name="delete">DELETE</string>
    <string name="share">SHARE</string>
</resources>